[package]
name = "bbc"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "04885eb49c426ad1f053ab5106cedb0aa4ef20ab", default-features = false, features = [
    # disable some default features
    # https://github.com/bevyengine/bevy/blob/HEAD/docs/cargo_features.md#default-features
    "animation",
    "bevy_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "filesystem_watcher",
    "ktx2",
    "png",
    "tonemapping_luts",
    "vorbis",
    "x11",
    "zstd",
] }
